@@ -19,6 +19,9 @@ Changes in backwards compatibility policy
   (Nikola Tanković, Uwe Schindler, Chris Male, Mike McCandless,
   Robert Muir)
 
+* LUCENE-4677: unpacked FSTs now use vInt to encode the node target,
+  to reduce their size (Mike McCandless)
+
 * LUCENE-4678: FST now uses a paged byte[] structure instead of a
   single byte[] internally, to avoid large memory spikes during
   building (James Dyer, Mike McCandless)
